[tool.poetry]
name = "data-engine"
version = "0.1.0"
description = "A data explorer and feature engineering library."
authors = ["HisDaoMaterials"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
